# carloscar-cli

./: Makefile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
tests/: test_init.py
